# Academy

.stfolder/: syncthing-folder-4c2ef0.txt
C++/DZ/DZ1/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
C++/DZ/DZ15/: task1.cpp  task2.cpp  task3.cpp
C++/DZ/DZ16/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
C++/DZ/DZ17/: CMakeLists.txt  main.cpp
C++/DZ/DZ18/: CMakeLists.txt  main.cpp
C++/DZ/DZ19/: CMakeLists.txt  main.cpp
C++/DZ/DZ2/: hw2.md  main.cpp
C++/DZ/DZ20/: CMakeLists.txt  main.cpp
C++/DZ/DZ21/: CMakeLists.txt  task1.cpp  task2.cpp
C++/DZ/DZ22/: CMakeLists.txt  task1.cpp  task2.cpp
C++/DZ/DZ23/: CMakeLists.txt  main.cpp
C++/DZ/DZ24/: CMakeLists.txt  task1.cpp
C++/DZ/DZ25/: CMakeLists.txt  task1.cpp  task2.cpp
C++/DZ/DZ26/: CMakeLists.txt  task1.cpp  task2.cpp
C++/DZ/DZ27/: CMakeLists.txt  main.cpp
C++/DZ/DZ28/: CMakeLists.txt  task1.cpp  task2.cpp
C++/DZ/DZ29/: CMakeLists.txt  main.cpp
C++/DZ/DZ3/: CMakeLists.txt  hw3.md  main  main.cpp
C++/DZ/DZ30/: CMakeLists.txt  hw-ex-2.md  main.cpp
C++/DZ/DZ31/: CMakeLists.txt  main.cpp
C++/DZ/DZ32/: CMakeLists.txt  main.cpp
C++/DZ/DZ33/: CMakeLists.txt  main.cpp
C++/DZ/DZ34/: CMakeLists.txt  task1.cpp  task2.cpp
C++/DZ/DZ35/: CMakeLists.txt  hw_algo.md  main.cpp
C++/DZ/DZ36_Last!!!/: CMakeLists.txt  README.md  hw_cmake_vcpkg.md  vcpkg.json
C++/DZ/DZ36_Last!!!/include/contact_manager/: contact.h  storage.h
C++/DZ/DZ36_Last!!!/src/: contact.cpp  main.cpp  storage.cpp
C++/DZ/DZ4/: CMakeLists.txt  hw4.md  main.cpp
C++/Materials/: _m-1.pptx
(+892 files in other folders)
